# projet_python_2_mba

./: .flake8  .gitignore  README copy.md  mypy.ini  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
app/: main.py
app/core/: dataset.py
app/routers/: customers.py  fraud.py  stats.py  system.py  transactions.py
app/services/: customer_service.py  fraud_detection_service.py  stats_service.py  system_service.py  transactions_service.py
tests/: conftest.py  test_customers.py  test_fraud.py  test_stats.py  test_system.py  test_transactions.py
tests/data/: cards_data.csv  mcc_codes.json  train_fraud_labels.json  transactions_data.csv  users_data.csv
tests_unittest/: test_features_customers.py  test_features_fraud.py  test_features_stats.py  test_features_system.py  test_features_transactions.py
